Added version constraint to msgpack.

--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -15,7 +15,7 @@ library
                        blaze-builder,
                        bytestring,
                        hashable,
-                       msgpack,
+                       msgpack >= 0.7,
                        mtl,
                        stm,
                        text,
