--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -9,7 +9,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Stagger
+  exposed-modules:     Stagger,
+                       Stagger.Counter,
+                       Stagger.Dist
+  other-modules:       Stagger.Util
   build-depends:       attoparsec,
                        base,
                        blaze-builder,
