--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -9,16 +9,14 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Stagger,
-                       Stagger.Counter,
-                       Stagger.Dist
-  other-modules:       Stagger.Util
   build-depends:       attoparsec,
                        base,
                        blaze-builder,
                        bytestring,
+                       cereal,
+                       containers,
                        hashable,
-                       msgpack >= 0.7,
+                       messagepack,
                        mtl,
                        stm,
                        text,
@@ -26,5 +24,19 @@ library
                        transformers,
                        unordered-containers,
                        zeromq3-haskell
-  hs-source-dirs:      src
+  default-extensions:  OverloadedStrings
   default-language:    Haskell2010
+  hs-source-dirs:      src
+  exposed-modules:     Stagger,
+                       Stagger.Counter,
+                       Stagger.Dist
+  other-modules:       Stagger.Util
+
+executable example
+  build-depends:      base,
+                      stagger-haskell,
+                      random
+  default-extensions: OverloadedStrings
+  default-language:   Haskell2010
+  hs-source-dirs:     example
+  main-is:            Main.hs
