Fixed memory leak by storing Dist values in normal form.

--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -15,6 +15,7 @@ library
                        bytestring,
                        cereal,
                        containers,
+                       deepseq,
                        hashable,
                        messagepack,
                        mtl,
