Add patched messagepack library as a submodule.

--- a/script/build
+++ b/script/build
@@ -3,6 +3,7 @@
 cd "$(dirname "$0")/.."
 
 cabal sandbox init
+cabal sandbox add-source vendor/messagepack-haskell
 cabal update
 cabal install --enable-tests --only-dependencies -j
 cabal configure --enable-tests
