Remove messagepack submodule; use version from Pusher hackage server.

--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -18,7 +18,7 @@ library
                        deepseq,
                        errors,
                        hashable,
-                       messagepack,
+                       pusher-messagepack,
                        mtl,
                        stm,
                        text,
