--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -14,6 +14,7 @@ library
                        blaze-builder        == 0.4.*,
                        bytestring,
                        cereal               == 0.4.*,
+                       clock,
                        containers,
                        deepseq,
                        errors               >= 1.4     && < 2.1,
