--- a/stagger-haskell.cabal
+++ b/stagger-haskell.cabal
@@ -13,7 +13,7 @@ library
   build-depends:       base                 == 4.*,
                        blaze-builder        == 0.4.*,
                        bytestring,
-                       cereal               == 0.4.*,
+                       cereal               >= 0.4,
                        containers,
                        deepseq,
                        errors               >= 1.4     && < 2.1,
